--- a/info.yml
+++ b/info.yml
@@ -1,5 +1,5 @@
-name : Your Name Here
+name : Nick
 keywords : "some | adjectives | about you"
-major: Your Major
+major: Computer Science
 gradyear: 2026
-tagline : a short phrase you want people to see on every page
+tagline : Hello everyone
